<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">

    <item
        android:id="@+id/action_chat"
        android:title="@string/action_chat"
        android:orderInCategory="100"
        android:icon="@drawable/ic_chat_white_24px"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />


    <item
        android:id="@+id/action_search"
        android:title="@string/action_search"
        android:orderInCategory="100"
        android:icon="@drawable/ic_search_white_24px"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />
    <item
        android:id="@+id/action_invite_friends"
        android:title="@string/action_invite"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_contactus"
        android:title="@string/action_contact_us"
        app:showAsAction="never" />


    <item
        android:id="@+id/action_legal"
        android:title="@string/action_legal"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_ourteam"
        android:title="@string/action_ourteam"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_logout"
        android:title="@string/action_logout"
        app:showAsAction="never" />


</menu>