<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".CatalogActivity">

    <item
        android:id="@+id/navdraw_home"
        android:title="@string/navstring_home"
        android:icon="@drawable/ic_home_white_24px"
        app:showAsAction="never" />

    <item
        android:icon="@drawable/nav_wish_black"
        android:id="@+id/navdraw_wishwall"
        android:title="@string/navstring_wishwall"
        app:showAsAction="never" />
    <item
        android:id="@+id/navdraw_rumblewall"
        android:title="@string/navstring_rumblewall" />
    <item
        android:icon="@drawable/ic_list_white_24px"
        android:id="@+id/navdraw_mylist"
        android:title="@string/navstring_mylist"
        app:showAsAction="never" />
</menu>